syntax = "proto3";

package stubs.example;

option java_multiple_files = true;
option java_package = "io.github.raphonzius.java.stubs.example";

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
